--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
     </style>
 </head>
 <body>
+  
     <div class="container">
         <div class="contact-info">
             <div class="phone">(562) 206 - 280 6291</div>
@@ -263,7 +264,15 @@
             </div>
         </div>
 
+        <div class="container">
+          <div style="text-align: center; margin-bottom: 20px;">
+            <span style="font-size: .8rem; color: #ffcc00;">🚧
+                Site Under Construction
+            </span>  <span style="font-size: .8rem; color: #ffcc00;">🚧</span>
+        </div>
+
         <div class="header">
+            
             <h1 class="main-title">DETAIL HABIT</h1>
             <h2 class="subtitle">MOBILE CAR WASH AND AUTO DETAILING</h2>
             <p class="tagline">Compulsive attention to detail: Serving the OC and LA areas</p>
@@ -294,6 +303,7 @@
 
         <div class="footer">
             <p> 
+                <span style="font-size: 1.2rem; color: #ffcc00;">🚧</span> Site Under Construction <span style="font-size: 1.2rem; color: #ffcc00;">🚧</span> <br> <br>
                 <a href="https://www.facebook.com/DetailHabitUSA" 
                     target="_blank">Check out our Facebook</a> <br> <br>
                 <a href="https://www.instagram.com/detailhabit562" 
