--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
     <div class="container">
         <div style="text-align: center; margin-bottom: 20px;">
             <span style="font-size: .8rem; color: #ffcc00;">
-               <h1><span style="font-size: 2rem; color: #ffcc00;">🚧</span>  Site Under Construction <span style="font-size: 2rem; color: #ffcc00;">🚧</span></h1>
+               <h1><span style="font-size: 2rem; color: #ffcc00;">🚧</span>  Site Under Construction -- Prices are Incorrect! <span style="font-size: 2rem; color: #ffcc00;">🚧</span></h1>
         </div>
 
         <div class="header">
@@ -681,7 +681,7 @@
             <h2 class="subtitle">MOBILE CAR WASH AND AUTO DETAILING</h2>
             <p class="tagline">Compulsive attention to detail: Serving the OC and LA areas</p>
         </div>
-
+   
         <!-- Table-based main navigation -->
         <nav class="navigation">
             <table class="nav-table">
@@ -737,7 +737,10 @@
                 </tr>
             </table>
         </div>
-
+ <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
+         <span style="font-size: .8rem; color: #ffcc00;">
+             <h1> <span style="font-size: 2rem; color: #ffcc00;">🚧</span>   Site Under Construction -- Prices are Incorrect! <span style="font-size: 2rem; color: #ffcc00;">🚧</span></h1>
+        </div>
         <!-- Carousel -->
         <div class="carousel-container">
             <div class="carousel-wrapper">
@@ -964,7 +967,7 @@
             <p> 
                  <div style="text-align: center; margin-bottom: 20px;">
             <span style="font-size: .8rem; color: #ffcc00;">
-               <h1><span style="font-size: 2rem; color: #ffcc00;">🚧</span>  Site Under Construction <span style="font-size: 2rem; color: #ffcc00;">🚧</span></h1>
+               <h1><span style="font-size: 2rem; color: #ffcc00;">🚧</span>   Site Under Construction -- Prices are Incorrect! <span style="font-size: 2rem; color: #ffcc00;">🚧</span></h1>
         </div> <br> <br>
                 <a href="https://www.facebook.com/DetailHabitUSA" target="_blank">Check out our Facebook</a> <br> <br>
                 <a href="https://www.instagram.com/detailhabit562" target="_blank">View our work on instagram</a> <br> <br>
